--- a/public/ViewerJS/index.html
+++ b/public/ViewerJS/index.html
@@ -724,7 +724,9 @@
         <div id="documentName" style="display: none;"></div>
         <div id="titlebarRight">
             <button id="presentation" class="toolbarButton presentation" title="Presentation" style="display: none;"></button>
-            <button id="fullscreen" class="toolbarButton fullscreen" title="Fullscreen"></button>
+            <button id="fullscreen" class="toolbarButton fullscreen" title="Fullscreen"
+                    style="display: inline-flex; justify-content: center;">
+                  &nbsp на весь экран</button>
             <button id="download" class="toolbarButton download" title="Download"
                     style="display: none;"></button>
         </div>
