--- a/public/ViewerJS/index.html
+++ b/public/ViewerJS/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta http-equiv="Cache-Control" content="no-cache"/>
-
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <!--
     This is a generated file. DO NOT EDIT.
 
@@ -38,9 +38,16 @@
     -->
     <style media=print>
         body {
-            display: none
+            display: none;
         }
     </style>
+    <style>
+        body{
+            font-family: "Open Sans" !important;
+        }
+    </style>
+
+
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"/>
     <script type="text/javascript">
